Added a backend route to get all stadium names
